#
# Makefile gnucobol/config
#
# Copyright (C) 2003-2012, 2014-2015, 2017 Free Software Foundation, Inc.
# Written by Keisuke Nishida, Roger While, Simon Sobisch
#
# This file is part of GnuCOBOL.
#
# The GnuCOBOL compiler is free software: you can redistribute it
# and/or modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# GnuCOBOL is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GnuCOBOL.  If not, see <https://www.gnu.org/licenses/>.

configdir = @COB_CONFIG_DIR@
config_DATA = default.conf cobol85.conf cobol2002.conf cobol2014.conf \
	acu.conf mf.conf ibm.conf mvs.conf bs2000.conf realia.conf rm.conf \
	acu-strict.conf mf-strict.conf ibm-strict.conf mvs-strict.conf \
	bs2000-strict.conf realia-strict.conf rm-strict.conf xopen.conf \
	gcos.conf gcos-strict.conf lax.conf-inc \
	cobol85.words cobol2002.words cobol2014.words \
	acu.words mf.words ibm.words mvs.words bs2000.words realia.words \
	rm.words gcos.words runtime.cfg runtime_empty.cfg \
	default.ttbl alternate.ttbl \
	ebcdic500_ascii7bit.ttbl ebcdic500_ascii8bit.ttbl ebcdic500_latin1.ttbl

EXTRA_DIST = $(config_DATA)
